<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="celsius" type="java.lang.String" />
        <variable name="fahrenheit" type="java.lang.String" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ResultActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10sp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:layout_margin="10sp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{celsius}"
                android:layout_margin="10sp"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:layout_margin="10sp"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{fahrenheit}"
                android:layout_margin="10sp"
                android:textSize="20sp"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:layout_marginTop="30sp"
            android:text="@string/temperature" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:stretchColumns="1"
            android:divider="@color/black"
            android:showDividers="middle"
            >
            <TableRow android:id="@+id/cold">
                <TextView
                    android:text="@string/less_than_10"
                    android:padding="10sp" />
                <TextView
                    android:text="@string/cold"
                    android:gravity="center"
                    android:padding="10sp" />
            </TableRow>
            <TableRow android:id="@+id/tempered">
                <TextView
                    android:text="@string/between_10_and_20"
                    android:padding="10sp" />
                <TextView
                    android:text="@string/tempered"
                    android:gravity="center"
                    android:padding="10sp" />
            </TableRow>
            <TableRow android:id="@+id/warm">
                <TextView
                    android:text="@string/between_21_and_30"
                    android:padding="10sp" />
                <TextView
                    android:text="@string/warm"
                    android:gravity="center"
                    android:padding="10sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</layout>